# opendb

./: .gitignore  BUILD-WINDOWS.md  FIELD_TYPE_SUPPORT.md  README.md  build-windows.bat  bunfig.toml  dataforge-design-doc.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  setup-windows.bat  test_pg_types.sql  test_table.sql  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
.trae/skills/api-doc-generator/: SKILL.md
.trae/skills/db-connection-tester/: SKILL.md
.trae/skills/error-debugger/: SKILL.md
.trae/skills/migration-generator/: SKILL.md
.trae/skills/performance-profiler/: SKILL.md
.trae/skills/security-auditor/: SKILL.md
.trae/skills/sql-formatter/: SKILL.md
.trae/skills/tauri-db-dev/: SKILL.md
.trae/skills/tauri-test-generator/: SKILL.md
docs/: BUN_CHANGES_SUMMARY.md  BUN_SETUP.md  CONNECTION_STORE_MIGRATION.md
docs/superpowers/plans/: 2026-05-15-result-table-editing-plan.md
docs/superpowers/specs/: 2026-05-15-result-table-editing-design.md
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: connection_plugin.rs  lib.rs  main.rs
src-tauri/src/ai/: client.rs  commands.rs  mod.rs  optimizer.rs  types.rs
src-tauri/src/connection_store/: commands.rs  encryption.rs  mod.rs  models.rs
src-tauri/src/db/: clickhouse.rs  commands.rs  gaussdb.rs  manager.rs  mod.rs  mssql.rs  mysql.rs  pool_config.rs  postgres.rs  sql_limiter.rs  sqlite.rs  trait_def.rs  types.rs
src-tauri/src/plugins/: rpc.rs
src-tauri/src/ssh/: mod.rs  tunnel.rs
src-tauri/src/testing/: benchmark.rs  mock_data.rs  mod.rs
src/components/: AIPanel.tsx  ConnectionDialog.tsx  CreateDatabaseDialog.tsx  DataMigration.tsx  DatabaseIcon.tsx  ERDiagram.tsx  ERSelectorDialog.tsx  EditorPanel.tsx  ErrorBoundary.tsx  ImportExportDialog.tsx  MainLayout.tsx  NavicatMainPanel.tsx  OpenDbMainPanel.tsx  PaginationBar.tsx  QueryAnalyzer.tsx  QueryHistory.tsx  SchemaDiffDialog.tsx  Sidebar.tsx  SnippetPanel.tsx  StatusBar.tsx  TabBar.tsx  TableDesigner.tsx  Toolbar.tsx
src/lib/: ai-commands.ts  connection-store-api.ts  data-types.ts  ddl-generator.ts  export.ts  i18n.ts  migration.ts  secure-storage.ts  tauri-commands-mock.ts  tauri-commands.ts
src/stores/: ai-store.ts  app-store.ts
src/stores/modules/: connection.ts  history.ts  tab.ts  ui.ts
src/styles/: index.css
src/types/: index.ts
test/benchmark/: simple.bench.ts
test/mock/: tauri-commands.ts
test/unit/: connection-store.test.ts  tauri-commands-mock.test.ts
